Tue Apr 23 13:32:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Makefile.bor:
          Added Proactor directory

        * examples/Reactor/Proactor/Makefile.bor:
          Added this BCB makefile

        * examples/Reactor/Proactor/*.cpp
          Made all files compiling when doing a wchar build.

Tue Apr 23 10:03:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Makefile.bor:
          Added WFMO_Reactor directory

        * examples/Reactor/WFMO_Reactor/Makefile.bor:
          Added this BCB makefile

        * examples/Reactor/WFMO_Reactor/*.cpp
          Fixed several unused argument warnings that appeared with bcb.
          Made all files compiling when doing a wchar build.

Tue Apr 23 07:35:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Base_Thread_Adapter.h:
        * ace/Future.h:
        * ace/Naming_Context.h:
        * ace/Malloc.h:
        * ace/Malloc_Base.h:
        * ace/Malloc_T.h:
        * ace/NT_Service.h:
        * ace/Notification_Strategy.h:
        * ace/Object_Manager.h:
        * ace/OS_Thread_Adapter.h:
        * ace/WIN32_Asynch_IO.h:
          Doxygen-ized some of the comments

        * ace/OS.h:
          Added ACE_ALLOCATOR_NORETURN and ACE_NEW_MALLOC_NORETURN, these
          macro's set errno to ENOMEM incase of an memory error but don't
          call return but guarantee that the pointer is 0.

        * ace/QoS/QoS_Manager.h:
        * ace/QoS/QoS_Session_Impl.h:
          Doxygen-ized some of the comments

        * ace/config-doxygen.h:
          Added define ACE_YY_USES_PROTOS to parse ace/Svc_Conf_l.cpp correctly

        * tests/MT_Reactor_Upcall_Test.cpp:
          Fixed unicode and single threaded build errors/warnings

Mon Apr 22 20:40:41 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Logging_Event_Handler.{cpp h}:
          Moved LOGFILE_SUFFIX to open() method. Changed get_handle() to be