@@ -9,24 +9,22 @@
 #	Local macros
 #----------------------------------------------------------------------------
 
-BIN     = display_logfile
+EXAMPLES = Reactor_Logging_Server display_logfile
 
-#FILES	= CCM_App
-#SHLIB	= libCCM_App.$(SOEXT)
+all:
+	@for ex in $(EXAMPLES); \
+	do \
+		$(MAKE) -f $$ex.mak; \
+	done
 
-#LSRC	= $(addsuffix .cpp,$(FILES))
-#LOBJ	= $(addsuffix .o,$(FILES))
-#SHOBJ	= $(addsuffix .so,$(FILES))
+clean:
+	@for ex in $(EXAMPLES); \
+	do \
+		$(MAKE) -f $$ex.mak clean; \
+	done
 
-BUILD   = $(VBIN)
-
-#----------------------------------------------------------------------------
-#	Include macros and targets
-#----------------------------------------------------------------------------
-
-include	$(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
-include	$(ACE_ROOT)/include/makeinclude/macros.GNU
-include	$(ACE_ROOT)/include/makeinclude/rules.common.GNU
-include	$(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
-include	$(ACE_ROOT)/include/makeinclude/rules.bin.GNU
-include	$(ACE_ROOT)/include/makeinclude/rules.local.GNU
+realclean:
+	@for ex in $(EXAMPLES); \
+	do \
+		$(MAKE) -f $$ex.mak realclean; \
+	done
