@@ -1,3 +1,7 @@
+Tue Apr 23 11:38:40 2002  Steve Huston  <shuston@riverace.com>
+
+        * examples/C++NPv2/Makefile: Rearranged to build all the examples.
+
 Tue Apr 23 13:32:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/Reactor/Makefile.bor:
